Fix horizontal overflow for mobile attempt 2

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,6 @@
 html {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
-    overflow-x: hidden;
 }
 
 body {
@@ -40,12 +39,14 @@ img {
     margin-left: 1rem;
 }
 
-/* @media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
     html {
         font-size: 12px;
+        overflow-x: hidden;
+
     }
     
-} */
+}
 
 /* @media only screen and (max-width: 768px) {
     html {
@@ -437,6 +438,7 @@ footer {
 
     .course {
         flex-direction: column;
+        align-items: center;
     }
     
     .coursebox {
@@ -461,8 +463,6 @@ footer {
     .course-info h3 {
         margin: 0;
         margin-left: 1rem;
-        padding-top: .5rem;
-        padding-bottom: .5rem;
         display: block;
     }
 
